add:profile endpoint & auth with jwt
