# internal/router/routes.go
@@ -12,6 +12,7 @@ import (
 	"github.com/arshamroshannejad/squidshop-backend/internal/repository"
 	"github.com/arshamroshannejad/squidshop-backend/internal/service"
 	"github.com/redis/go-redis/v9"
+	"github.com/rs/cors"
 	swagger "github.com/swaggo/http-swagger"
 )
 
@@ -20,15 +21,25 @@ func SetupRoutes(db *sql.DB, redisDB *redis.Client, logger *slog.Logger, cfg *co
 	repositories := repository.NewRepository(db)
 	services := service.NewService(repositories, redisDB, logger, cfg)
 	handlers := handler.NewHandler(services)
-	mux.Handle("/api/v1/auth",
-		middleware.RateLimiter(0.008333, 1)(http.HandlerFunc(handlers.User().AuthUserHandler)),
+	mux.Handle(
+		"POST /api/v1/auth",
+		middleware.RateLimiter(0.008333, 1)(http.HandlerFunc(handlers.Auth().AuthUserHandler)),
 	)
-	mux.HandleFunc("POST /api/v1/auth/verify", handlers.User().VerifyAuthUserHandler)
+	mux.HandleFunc(
+		"POST /api/v1/auth/verify",
+		handlers.Auth().VerifyAuthUserHandler,
+	)
+	mux.Handle(
+		"GET /api/v1/user/profile",
+		middleware.RequireAuth(cfg)(http.HandlerFunc(handlers.User().UserProfileHandler)),
+	)
 	mux.Handle("/docs/", swagger.Handler(
 		swagger.URL("doc.json"),
 		swagger.DeepLinking(true),
 		swagger.DocExpansion("none"),
 		swagger.DomID("swagger-ui"),
 	))
-	return middleware.Logger(middleware.Timeout(mux))
+	return cors.Default().Handler(
+		middleware.Logger(middleware.Timeout(mux)),
+	)
 }
